<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/others">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>

    <item
        android:id="@+id/menu_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends"/>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>