<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_font"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/backgroud_layout"
                android:elevation="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_40sdp">

                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/dancing_font"
                    android:text="@string/welcome"
                    android:textColor="@color/primaryDark"
                    android:textSize="@dimen/_40ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/login_to_continue"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_user_id"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="0dp"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:text="@string/sing_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_16sdp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

                <TextView
                    android:id="@+id/textRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/new_account"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>