<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/backgroud_layout"
                android:elevation="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp">

                <TextView
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/edit_profil"
                    android:textColor="@color/primaryDark"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewImage"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_50sdp">

                    <ImageView
                        android:id="@+id/userProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/capture" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/choice_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/profile_image"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_8ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:startIconDrawable="@drawable/ic_user_id"
                    app:startIconTint="@color/primaryDark">

                    <EditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="0dp"
                        android:text="Sébastien"
                        android:enabled="false"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/primaryDark">

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="0dp"
                        android:text="sebastien@hotmail.com"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/primaryDark"
                    app:endIconDrawable="@drawable/ic_visibility"
                    app:endIconTint="@color/primaryDark">

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_confirmPassword_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/confirm_password"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/primaryDark"
                    app:endIconDrawable="@drawable/ic_visibility"
                    app:endIconTint="@color/primaryDark">

                    <EditText
                        android:id="@+id/register_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:text="@string/btn_edit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_16sdp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>